- fix fluid box being cutoff on game page

--- a/src/scss/components/_blocks.scss
+++ b/src/scss/components/_blocks.scss
@@ -185,4 +185,12 @@
   }
 }
 
+.games {
+  .block {
+    .full {
+      overflow: unset;
+    }
+  }
+}
+
 
